--- a/main.css
+++ b/main.css
@@ -58,3 +58,78 @@ button {
 	padding: 5px;
 	border-radius: 4px;
 }
+
+@keyframes circle {
+    from {
+      transform: scale(0);
+      opacity: 0.4;
+    }
+    to {
+      transform: scale(8);
+      opacity: 0;
+    }
+}
+
+.circle {
+    /*   margin: 0 auto; */
+      width: 100px;
+      height: 100px;
+      border-radius: 50%;
+      position: absolute;
+      top: 80%;
+      left: 46.49%;
+      box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
+      opacity: 0.4;
+	z-index: -1;
+}
+    
+.one {
+      animation: circle 6s 4s infinite linear;
+      background: dodgerblue;
+      opacity: 0.4;
+}
+    
+ .two {
+      animation: circle 6s 2s infinite linear;
+      background: dodgerblue;
+      opacity: 0.4;
+}
+    
+.three {
+      animation: circle 6s 0s infinite linear;
+      background: dodgerblue;
+      opacity: 0.1;
+}
+
+.container { 
+        height: 200px;
+        position: relative;
+        border: 13px solid green; 
+}
+
+.center {
+        margin: -3px;
+        position: absolute;
+        top: 50%;
+        left: 61%;
+        transform: translate(-38%, -50%);
+        padding: 49px 60px;
+        font-size: x-large;
+        border: 3px solid rgb(0, 57, 42);
+        background-color: aqua;
+        border-radius: 10px 10px 10px 10px;
+}
+
+.center2 {
+        margin: -3px;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-158%, -50%);
+        padding: 49px 60px;
+        font-size: x-large;
+        border: 3px solid rgb(0, 57, 42);
+        background-color: aqua;
+        box-shadow: #212121;
+        border-radius: 10px 10px 10px 10px;
+}
